docs(desktop-ui): document the analysis strip and attach refusals
README: add the binary analysis strip and refusal behaviour to "what each
screen shows", a "GUI shows vs CLI-only" table, AttachDiagnostics to the
code layout, the two new screenshots, and the expanded test coverage.
Review doc: record the refusal + analysis-strip follow-up pass.

Co-authored-by: Gao Yu <gaoyu06@users.noreply.github.com>